<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"

            android:textColor="@color/accent_text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Минск-Береза" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/type_number_layout"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/train_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/business" />

                <TextView
                    android:id="@+id/tv_train_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="931"
                    android:textColor="@color/secondary_text_color" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_arrive_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/arrive"
                android:textColor="@color/secondary_text_color"
                app:layout_constraintStart_toEndOf="@+id/type_number_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_arrive_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="19:30"
                android:textColor="@color/accent_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_arrive_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_arrive_title" />

            <TextView
                android:id="@+id/tv_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="19:30"
                android:textColor="@color/accent_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_departure_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_departure_title" />

            <TextView
                android:id="@+id/tv_departure_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure"
                android:textColor="@color/secondary_text_color"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tv_arrive_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/platform"
                android:textColor="@color/secondary_text_color"
                app:layout_constraintStart_toEndOf="@+id/type_number_layout"
                app:layout_constraintTop_toBottomOf="@+id/tv_arrive_time" />

            <TextView
                android:id="@+id/tv_platform_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="12"
                android:textColor="@color/accent_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/way"
                android:textColor="@color/secondary_text_color"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_way_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="2"
                android:textColor="@color/accent_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>