<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_header"
        android:background="@drawable/bg_gradient_header"
        android:elevation="8dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/forest"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_departure_station"
            style="@style/InputLabelTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/departure_station"
            android:textColorHint="@color/input_hint_color"
            app:layout_constraintEnd_toStartOf="@+id/btn_change"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_destination_station"
            style="@style/InputLabelTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/destination_station"
            android:textColorHint="@color/input_hint_color"
            app:layout_constraintEnd_toStartOf="@+id/btn_change"
            app:layout_constraintStart_toStartOf="@+id/til_departure_station"
            app:layout_constraintTop_toBottomOf="@id/til_departure_station">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_departure_date"
            style="@style/InputLabelTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:hint="@string/departure_date"
            android:textColorHint="@color/input_hint_color"
            app:layout_constraintEnd_toEndOf="@+id/til_destination_station"
            app:layout_constraintStart_toStartOf="@+id/til_destination_station"
            app:layout_constraintTop_toBottomOf="@id/til_destination_station">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_today_black_24dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/circle_accent"
            app:layout_constraintBottom_toBottomOf="@+id/til_departure_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/til_departure_station" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle_accent"
            app:layout_constraintBottom_toBottomOf="@+id/til_destination_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/til_destination_station" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/line_bg"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/btn_change"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/til_destination_station"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_departure_station"
            app:srcCompat="@drawable/ic_reverse" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/search"
            android:textSize="18sp"
            android:letterSpacing="0.0"
            app:layout_constraintEnd_toEndOf="@+id/til_departure_date"
            app:layout_constraintStart_toStartOf="@+id/til_departure_date"
            app:layout_constraintTop_toBottomOf="@+id/til_departure_date" />

        <View
            android:id="@+id/select_date_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_departure_date"
            app:layout_constraintEnd_toEndOf="@+id/til_departure_date"
            app:layout_constraintStart_toStartOf="@+id/til_departure_date"
            app:layout_constraintTop_toTopOf="@+id/til_departure_date" />
        <View
            android:id="@+id/select_departure_station_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_departure_station"
            app:layout_constraintEnd_toEndOf="@+id/til_departure_station"
            app:layout_constraintStart_toStartOf="@+id/til_departure_station"
            app:layout_constraintTop_toTopOf="@+id/til_departure_station" />
        <View
            android:id="@+id/select_destination_station_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_destination_station"
            app:layout_constraintEnd_toEndOf="@+id/til_destination_station"
            app:layout_constraintStart_toStartOf="@+id/til_destination_station"
            app:layout_constraintTop_toTopOf="@+id/til_destination_station" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>